# neonmachines

./: .nmhints  .nmignore  Cargo.toml  LICENSE  NMHINTS_GUIDE.md  README.md  TEST_INSTRUCTIONS.md  UI_FIXES_SUMMARY.md  USAGE_GUIDE.md  config.nm  create_workflow_fix.poml  example_workflow.poml  multi_workflow.nm  multiline_test.poml  test.poml  test_fixes.sh  test_help.sh  test_injection.nm  test_let_injection.nm
.neonmachines_data/: theme_config.json
extensions/ext_neonmachines/: README.md  main.py  nmmcp.json
extensions/ext_nmextension/: README.md  nmextension.sh  nmmcp.json
prompts/: advanced_coding_workflow.nm  cargo_validator.poml  chat_system.poml  chat_user.poml  code_generator.poml  code_request.poml  code_request_with_todo.poml  code_request_with_vars.poml  coding_agent.poml  coding_workflow.nm  final.poml  fix_code.poml  get_files.poml  main.poml  main_injection_test.poml  multi_variable_agent.poml  secondary.poml  security_analyzer.poml  security_check.poml  security_vulnerability_analyzer.poml  summary.poml  task_oriented_agent.poml  todo_manager.poml  validate_security_check.poml
prompts/files/: agents.rs
src/: agents.rs  app.rs  cli.rs  commands.rs  commands.rs.backup  create_ui.rs  error.rs  main.rs  nm_config.rs  nmmcp.rs  poml.rs  rate_limiter.rs  runner.rs  shared_history.rs  state.rs  tools.rs  tui.rs  web.rs  workflow_ui.rs
src/metrics/: metrics_collector.rs  mod.rs  performance.rs
src/web/: api.rs
src/web/api/: handlers.rs  models.rs
web/: graph-editor.html  index.html  metrics.html  poml-editor.html  test-poml.html  tracing.html
web/static/: graph.json  workflow.poml
web/static/css/: buttons.css  main.css  paper-theme.css
web/static/js/: graph-editor.js  main.js  metrics.js  poml-editor.js  tracing.js
