[package]
name = "neonmachines"
version = "0.1.0"
edition = "2024"

[dependencies]
llmgraph = "0.1.0"
dotenv = "0.15.0"
tokio = {version = "1.47.1", features = ["full"]}
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.142"
async-trait = "0.1.89"
ratatui = "0.29.0"
crossterm = "0.27"
color-eyre = "0.6"
unicode-segmentation = "1.10"
reqwest = "0.12.23"
