[package]
name = "neonmachines"
version = "0.2.0"
edition = "2024"
description = "A graph-based AI Orchestration framework with professional UI and web interface"
authors = ["Neonmachines Team"]
license = "MIT"
repository = "https://github.com/neonmachines/neonmachines"
homepage = "https://neonmachines.com"

[dependencies]
llmgraph = { version = "0.1.1" }
dotenv = "0.15.0"
tokio = {version = "1.47.1", features = ["full"]}
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.142"
async-trait = "0.1.89"
ratatui = { version = "0.29.0", features = ["all-widgets", "serde"] }
crossterm = "0.27"
color-eyre = "0.6"
unicode-segmentation = "1.10"
reqwest = { version = "0.12.23", features = ["json"] }
filetime = "0.2.25"
regex = "1.11.1"
chrono = { version = "0.4.41", features = ["serde"] }
toml = "0.8.19"
openai-api-rs = "4.0.7"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
notify = "6.1.1"
glob = "0.3"
base64 = "0.22"
uuid = { version = "1.11", features = ["v4", "serde"] }
tempfile = "3.14"
axum = "0.7"
tower-http = { version = "0.5", features = ["cors", "fs"] }
tower = "0.4"
futures = "0.3"
tokio-stream = "0.1"
serde_html_form = "0.2"
html-escape = "0.2.13"
once_cell = "1.19"
parking_lot = "0.12"
dashmap = "5.5"
url = "2.5"
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
mime = "0.3"
mime_guess = "2.0"
tracing-appender = "0.2"
shellexpand = "3.1"
dialoguer = "0.11"
clap = { version = "4.5", features = ["derive"] }
indicatif = "0.17"
console = "0.15"
path-absolutize = "3.1"
ignore = "0.4"
which = "6.0"
ratelimit = "0.4.1"
tower_governor = "0.4"
thiserror = "1.0"

[[bin]]
name = "neonmachines"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
